--- a/movie.html
+++ b/movie.html
@@ -15,60 +15,42 @@
 <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
 
 <style>
-body {
-  margin:0; background:#000; color:#fff; font-family:Arial,sans-serif;
-}
-.player {
-  width:100vw;
-  height:56.25vw; /* 16:9 aspect ratio */
-  max-height:90vh;
-  background:#000;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-}
-.details {
-  max-width:1000px;
-  margin:16px auto;
-  background:#111;
-  padding:16px;
-  border-radius:14px;
-}
-.meta { color:#aaa; font-size:14px; margin-bottom:8px; }
-.watch { background:#e50914; color:#fff; font-size:20px; padding:16px; width:100%; border:none; border-radius:14px; font-weight:bold; cursor:pointer; margin-bottom:10px; }
-.share { background:#222; color:#fff; font-size:16px; padding:14px; width:100%; border:none; border-radius:14px; cursor:pointer; }
-.share-options { display:none; margin-top:10px; gap:10px; flex-wrap:wrap; display:flex; }
-.share-options button { flex:1; padding:12px; border:none; border-radius:10px; font-weight:bold; cursor:pointer; }
-.whatsapp { background:#25D366; color:#000; }
-.imo { background:#00b2ff; color:#000; }
-.tiktok { background:#000; color:#fff; border:1px solid #333; }
-#commentsSection { max-width:1000px; margin:20px auto; background:#111; padding:16px; border-radius:14px; }
-#commentsList div { background:#222; padding:8px 10px; border-radius:8px; margin-bottom:6px; position:relative; }
-#usernameInput,#commentInput { width:100%; padding:8px; border-radius:6px; background:#111; color:#fff; border:none; margin-bottom:6px; }
-#commentBtn { padding:8px 16px; border:none; border-radius:8px; background:#e50914; color:#fff; font-weight:bold; cursor:pointer; }
+body{margin:0;background:#000;color:#fff;font-family:Arial,sans-serif;padding:0}
+.player-container{width:100vw;height:100vh;display:flex;justify-content:center;align-items:center;background:#000}
+.player{width:95vw;height:95vh;border-radius:10px;overflow:hidden}
+.details{max-width:900px;margin:16px auto;background:#111;padding:16px;border-radius:14px}
+.meta{color:#aaa;font-size:14px;margin-bottom:8px}
+.watch{background:#e50914;color:#fff;font-size:20px;padding:16px;width:100%;border:none;border-radius:14px;font-weight:bold;cursor:pointer;margin-bottom:10px}
+.share{background:#222;color:#fff;font-size:16px;padding:14px;width:100%;border:none;border-radius:14px;cursor:pointer}
+.share-options{display:none;margin-top:10px;gap:10px;flex-wrap:wrap;display:flex}
+.share-options button{flex:1;padding:12px;border:none;border-radius:10px;font-weight:bold;cursor:pointer}
+.whatsapp{background:#25D366;color:#000}
+.imo{background:#00b2ff;color:#000}
+.tiktok{background:#000;color:#fff;border:1px solid #333}
+#commentsSection{max-width:900px;margin:20px auto;background:#111;padding:16px;border-radius:14px}
+#commentsList div{background:#222;padding:8px 10px;border-radius:8px;margin-bottom:6px;position:relative}
+#usernameInput,#commentInput{width:100%;padding:8px;border-radius:6px;background:#111;color:#fff;border:none;margin-bottom:6px}
+#commentBtn{padding:8px 16px;border:none;border-radius:8px;background:#e50914;color:#fff;font-weight:bold;cursor:pointer}
 </style>
 </head>
 
 <body>
 
-<div class="player">
+<!-- Fullscreen Player -->
+<div class="player-container">
   <video id="player" controls crossorigin></video>
 </div>
 
 <div class="details">
   <h1 id="title"></h1>
   <div class="meta" id="meta"></div>
-
   <button class="watch" id="watchBtn">▶ Watch Movie</button>
   <button class="share" id="shareBtn">🔗 Share Movie</button>
-
   <div class="share-options" id="shareOptions">
     <button class="whatsapp" id="shareWhatsapp">WhatsApp</button>
     <button class="imo" id="shareImo">IMO</button>
     <button class="tiktok" id="shareTiktok">TikTok</button>
   </div>
-
-  <div id="adBox" style="display:none;"></div>
   <p id="synopsis"></p>
 </div>
 
@@ -80,10 +62,11 @@ body {
   <button id="commentBtn">Post Comment</button>
 </div>
 
+<!-- Plyr JS -->
 <script src="https://cdn.plyr.io/3.7.8/plyr.polyfilled.js"></script>
 
 <script>
-// ===== FIREBASE =====
+/* ===== FIREBASE ===== */
 const firebaseConfig = {
   apiKey: "AIzaSyBGGV9F3Nv13nRJ8t4QCP5Y0IosmKfYz1s",
   authDomain: "busanso-pins.firebaseapp.com",
@@ -95,118 +78,104 @@ const firebaseConfig = {
 };
 firebase.initializeApp(firebaseConfig);
 
-// ===== LOAD MOVIE =====
+/* ===== LOAD MOVIE ===== */
 const params = new URLSearchParams(location.search);
 const id = params.get("id");
-const movie = MOVIES.find(m=>m.id===id);
+const movie = MOVIES.find(m => m.id === id);
 if(!movie) location.replace("movies.html");
 
-// ===== POPULATE INFO =====
-title.textContent = movie.title;
-meta.textContent = movie.country + " • " + movie.year;
-synopsis.textContent = movie.synopsis || "";
+/* ===== POPULATE INFO ===== */
+document.getElementById("title").textContent = movie.title;
+document.getElementById("meta").textContent = movie.country + " • " + movie.year;
+document.getElementById("synopsis").textContent = movie.synopsis || "";
 
-// ===== PLAYER =====
-const storageKey = "resume_" + movie.id;
+/* ===== STORAGE KEY ===== */
+const storageKey = "resume_movie_" + movie.id;
+
+/* ===== INITIALIZE PLYR ===== */
 const player = new Plyr('#player', { 
   autoplay:true, 
   controls:['play','progress','current-time','mute','volume','fullscreen'] 
 });
 
-// ===== NORMALIZE VIDEO URL =====
-function normalize(url){
-    url=url.trim();
-    // YouTube
-    if(url.includes("youtube.com") || url.includes("youtu.be")){
-        let id=null;
-        try{
-            if(url.includes("youtu.be/")) id=url.split("youtu.be/")[1].split(/[?&]/)[0];
-            else if(url.includes("/embed/")) id=url.split("/embed/")[1].split(/[?&]/)[0];
-            else if(url.includes("/shorts/")) id=url.split("/shorts/")[1].split(/[?&]/)[0];
-            else id=new URL(url).searchParams.get("v");
-        }catch(e){id=null;}
-        if(id) return {type:'youtube', source:id};
-    }
-    // Vimeo
-    if(url.includes("vimeo.com")){
-        const id = url.match(/\d+/);
-        if(id) return {type:'vimeo', source:id[0]};
-    }
-    // Google Drive
-    if(url.includes("drive.google.com")){
-        const match = url.match(/\/d\/([a-zA-Z0-9_-]+)/);
-        if(match) return {type:'video', source:`https://drive.google.com/uc?export=media&id=${match[1]}`};
-    }
-    // fallback
-    return {type:'video', source:url};
+/* ===== VIDEO NORMALIZATION ===== */
+function normalizeVideo(url){
+  url = url.trim();
+  if(url.includes("youtu")) {
+    let id = url.split("v=")[1] || url.split("youtu.be/")[1] || url.split("/embed/")[1];
+    if(id) id = id.split("&")[0];
+    return {type:'youtube', source:id};
+  }
+  if(url.includes("vimeo")) return {type:'vimeo', source:url.split("/").pop()};
+  if(url.includes("drive.google.com")) {
+    let match = url.match(/\/d\/([a-zA-Z0-9_-]+)/);
+    if(match) return {type:'mp4', source:`https://drive.google.com/uc?export=media&id=${match[1]}`};
+  }
+  return {type:'mp4', source:url};
 }
 
-// ===== LOAD MOVIE FUNCTION =====
-function loadMovie(fullscreen=false){
-    const v = normalize(movie.video);
-    if(v.type==='youtube' && !v.source){ alert("Invalid YouTube URL!"); return; }
-    
-    if(v.type==='youtube') player.source={type:'youtube',sources:[{src:v.source,provider:'youtube'}]};
-    else if(v.type==='vimeo') player.source={type:'vimeo',sources:[{src:v.source,provider:'vimeo'}]};
-    else player.source={type:'video',sources:[{src:v.source,type:'video/mp4'}]};
+/* ===== LOAD MOVIE ===== */
+function loadMovie(userAction=false){
+  const v = normalizeVideo(movie.video);
+  if(v.type==='youtube') player.source = {type:'youtube', sources:[{src:v.source, provider:'youtube'}]};
+  else if(v.type==='vimeo') player.source = {type:'vimeo', sources:[{src:v.source, provider:'vimeo'}]};
+  else player.source = {type:'video', sources:[{src:v.source,type:'video/mp4'}]};
 
-    const saved = JSON.parse(localStorage.getItem(storageKey));
-    if(saved && saved.time) player.currentTime = saved.time;
-
-    if(fullscreen) player.fullscreen.enter();
-    player.play();
+  const saved = JSON.parse(localStorage.getItem(storageKey));
+  if(saved && saved.time) player.currentTime = saved.time;
+  if(userAction) player.fullscreen.enter();
+  player.play();
 }
+window.addEventListener('load',()=>loadMovie());
 
-// ===== AUTO-LOAD =====
-window.addEventListener('load',()=>{ loadMovie(); });
+/* ===== SAVE PROGRESS ===== */
+player.on('timeupdate',()=>localStorage.setItem(storageKey, JSON.stringify({time:player.currentTime})));
 
-// ===== SAVE TIME =====
-player.on('timeupdate',()=>{ 
-    localStorage.setItem(storageKey, JSON.stringify({time:player.currentTime}));
-});
+/* ===== WATCH BUTTON ===== */
+document.getElementById("watchBtn").onclick = ()=>loadMovie(true);
 
-// ===== WATCH BUTTON =====
-watchBtn.onclick = ()=>{ loadMovie(true); };
-
-// ===== SHARE =====
+/* ===== SHARE ===== */
 const SHARE_URL = "https://busanso-nation.github.io/home.html";
-const shareText = movie.title + "\n" + movie.country + " • " + movie.year + "\n\n" + (movie.synopsis||"") + "\n\nWatch on BUSANSO:\n" + SHARE_URL;
+const shareText = `${movie.title}\n${movie.country} • ${movie.year}\n\n${movie.synopsis}\n\nWatch on BUSANSO:\n${SHARE_URL}`;
+document.getElementById("shareBtn").onclick = ()=>{ 
+  const so = document.getElementById("shareOptions");
+  so.style.display = so.style.display==='flex'?'none':'flex'; 
+};
+document.getElementById("shareWhatsapp").onclick = ()=>window.open("https://wa.me/?text="+encodeURIComponent(shareText));
+document.getElementById("shareImo").onclick = ()=>window.open("imo://chat?text="+encodeURIComponent(shareText));
+document.getElementById("shareTiktok").onclick = ()=>{ navigator.clipboard.writeText(shareText); alert("Copied! Paste it on TikTok"); };
 
-shareBtn.onclick = ()=>{ shareOptions.style.display = shareOptions.style.display==='flex'?'none':'flex'; };
-shareWhatsapp.onclick = ()=>{ window.open("https://wa.me/?text="+encodeURIComponent(shareText)); };
-shareImo.onclick = ()=>{ window.open("imo://chat?text="+encodeURIComponent(shareText)); };
-shareTiktok.onclick = ()=>{ navigator.clipboard.writeText(shareText); alert("Copied! Paste it on TikTok"); };
-
-// ===== COMMENTS =====
+/* ===== COMMENTS ===== */
 const commentsRef = firebase.database().ref("comments/movies/" + movie.id);
 const savedName = localStorage.getItem("username");
-if(savedName) usernameInput.value = savedName;
+if(savedName) document.getElementById("usernameInput").value = savedName;
 
-commentBtn.onclick = ()=>{
-    const user=usernameInput.value.trim().slice(0,20);
-    const text=commentInput.value.trim().slice(0,300);
-    if(!user||!text) return;
-    localStorage.setItem("username",user);
-    commentsRef.push({user,text,timestamp:firebase.database.ServerValue.TIMESTAMP});
-    commentInput.value="";
+document.getElementById("commentBtn").onclick = ()=>{
+  const user = document.getElementById("usernameInput").value.trim().slice(0,20);
+  const text = document.getElementById("commentInput").value.trim().slice(0,300);
+  if(!user||!text) return;
+  localStorage.setItem("username",user);
+  commentsRef.push({user,text,timestamp:firebase.database.ServerValue.TIMESTAMP});
+  document.getElementById("commentInput").value = "";
 };
 
 commentsRef.limitToLast(100).on("value", snap=>{
-    commentsList.innerHTML = "";
-    const arr=[];
-    snap.forEach(c=>arr.push({data:c.val(), ref:c.ref}));
-    arr.sort((a,b)=>b.data.timestamp-b.data.timestamp);
-    arr.forEach(c=>{
-        const div=document.createElement("div");
-        div.innerHTML="<strong>"+c.data.user+"</strong>: "+c.data.text;
-        if(localStorage.getItem("activePIN")==="Orion196"){
-            const b=document.createElement("button");
-            b.textContent="🗑"; b.style.position="absolute"; b.style.right="6px"; b.style.top="6px";
-            b.onclick=function(){ c.ref.remove(); };
-            div.appendChild(b);
-        }
-        commentsList.appendChild(div);
-    });
+  const list = document.getElementById("commentsList");
+  list.innerHTML = "";
+  const arr = [];
+  snap.forEach(c=>arr.push({data:c.val(), ref:c.ref}));
+  arr.sort((a,b)=>b.data.timestamp-b.data.timestamp);
+  arr.forEach(c=>{
+    const div = document.createElement("div");
+    div.innerHTML = `<strong>${c.data.user}</strong>: ${c.data.text}`;
+    if(localStorage.getItem("activePIN")==="Orion196"){
+      const b = document.createElement("button");
+      b.textContent="🗑"; b.style.position="absolute"; b.style.right="6px"; b.style.top="6px";
+      b.onclick = ()=>c.ref.remove();
+      div.appendChild(b);
+    }
+    list.appendChild(div);
+  });
 });
 </script>
 
