--- a/watch.html
+++ b/watch.html
@@ -50,7 +50,7 @@ footer{text-align:center;font-size:.85rem;margin-top:15px;opacity:.7;}
   </div>
 
   <div class="actions">
-    <a href="movies.html" class="btn movies">🎬 Movies</a>
+    <a href="movi.html" class="btn movies">🎬 Movies</a>
     <a href="series.html" class="btn series">📺 Series</a>
     <a href="packages.html" class="btn renew">⏳ Extend Subscription</a>
     <a href="busansocity.html" class="btn join">💖 Join Busanso City</a>
