--- a/series.html
+++ b/series.html
@@ -178,9 +178,9 @@ body{
 <!-- NAV -->
 <div class="nav">
   <button onclick="location.href='watch.html'">🏠 Home</button>
-  <button onclick="location.href='movies.html'">🎬 Movies</button>
+  <button onclick="location.href='movi.html'">🎬 Movies</button>
   <button onclick="location.href='donate.html'">❤️ Donate</button>
-  <button onclick="location.href='https://youtube.com/@marriagetips-f7e?si=LHYc47_CHGxNh7-3'">💍 Marriage Tips</button>
+  <button onclick="location.href='movies.html'">💍 Marriage Tips</button>
 </div>
 
 <!-- SEARCH -->
